syntax = "proto3";

option csharp_namespace = "Proto.Command.Client";

import "google/protobuf/timestamp.proto";
import "DTO/trace_data.proto";

service ClientCommandProtoService {
  rpc CreateTimeSlotControl (CreateTrackingControlCommandProto) returns (CommandResponse);
}

message CreateTrackingControlCommandProto {
  string ticketId = 1;
  google.protobuf.Timestamp date = 2;
  TraceDataProto traceData = 3;
}

message CommandResponse {
  bool success = 1;
}
